--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600,700,800|Montserrat:100,200,300,400,500,600,700,800|Open+Sans:100,200,300,400,500,600,700,800|Raleway:100,200,300,400,500,600,700,800|Roboto:100,200,300,400,500,600,700,800|Source+Sans+Pro:100,200,300,400,500,600,700,800|Work+Sans:100,200,300,400,500,600,700,800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
